<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.hm.achievement</groupId>
	<artifactId>advanced-achievements</artifactId>
	<version>11.7</version>
	<url>https://github.com/PyvesB/advanced-achievements</url>
	<name>AdvancedAchievements</name>
	<description>A Minecraft plugin that brings unique and challenging achievements on your server! Books, GUI, rankings, rewards, effects and more!</description>
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>
		<byte-buddy.version>1.17.7</byte-buddy.version>
		<mockito.version>5.20.0</mockito.version>
	</properties>

	<modules>
		<module>advanced-achievements-plugin</module>
	</modules>

	<build>
		<finalName>original-${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>net.revelc.code.formatter</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
				<version>2.29.0</version>
				<configuration>
					<configFile>${project.basedir}/../formatter-config.xml</configFile>
					<compilerSource>${java.version}</compilerSource>
					<compilerCompliance>${java.version}</compilerCompliance>
					<compilerTargetPlatform>${java.version}</compilerTargetPlatform>
					<lineEnding>KEEP</lineEnding>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.14.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.6.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>essentials-repo</id>
			<url>https://repo.essentialsx.net/releases/</url>
		</repository>
		<repository>
			<id>placeholderapi-repo</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
		</repository>
		<repository>
			<id>paper-repo</id>
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
		<repository>
			<id>jitpack-repo</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.dagger</groupId>
				<artifactId>dagger</artifactId>
				<version>2.57.2</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.17.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>1.14.0</version>
			</dependency>
			<dependency>
				<groupId>io.papermc.paper</groupId>
				<artifactId>paper-api</artifactId>
				<version>1.21.1-R0.1-SNAPSHOT</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.github.MilkBowl</groupId>
				<artifactId>VaultAPI</artifactId>
				<version>1.7.1</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.github.pyvesb</groupId>
				<artifactId>petmaster</artifactId>
				<version>1.12.5</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.github.Zrips</groupId>
				<artifactId>Jobs</artifactId>
				<version>v5.2.6.2</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>net.essentialsx</groupId>
				<artifactId>EssentialsX</artifactId>
				<version>2.21.2</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>me.clip</groupId>
				<artifactId>placeholderapi</artifactId>
				<version>2.11.6</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>42.3.1</version>
			</dependency>
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>1.4.200</version>
			</dependency>

			<!-- Test dependencies -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>6.0.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy</artifactId>
				<version>${byte-buddy.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy-agent</artifactId>
				<version>${byte-buddy.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockbukkit.mockbukkit</groupId>
				<artifactId>mockbukkit-v1.21</artifactId>
				<version>4.0.0</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
